feat: add support for process.env.PORT environment variable to be able to run app on a configurable port
fix: change port variable case from lowercase port to uppercase PORT to improve semantics

refactor: remove health check endpoint from handlers and add a separate health check server

refactor: move conversion functions from user repository to domain package

refactor: change user repository to use interface instead of concrete implementation

refactor: change user service to use domain conversion functions instead of repository conversion functions

refactor: change user service to use domain package instead of repository package

refactor: change error message in CreateUser handler to be more descriptive

refactor: change error message in GetUserByFilters handler to be more descriptive

refactor: add String() method to User and UserDTO domain objects for better logging

refactor: add Validate() method to UserDTO domain object for better validation

refactor: add build and run targets to Makefile

refactor: add deps target to

feat(whip-round): add whip-round script to the project
