# docs/swagger.json
@@ -4,30 +4,6 @@
         "contact": {}
     },
     "paths": {
-        "/health-check": {
-            "get": {
-                "description": "Check server health",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "health"
-                ],
-                "summary": "Check server health",
-                "operationId": "health-check",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
         "/users": {
             "get": {
                 "description": "Get a user by filters",
